--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "webpack",
     "typescript"
   ],
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
-  "license": "MIT",
+  "author": "",
+  "homepage": "",
+  "license": "",
   "scripts": {
     "rimraf": "rimraf",
     "tslint": "tslint",
@@ -57,23 +57,24 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular/http": "2.0.0-rc.5",
     "@angular/common": "2.0.0-rc.5",
     "@angular/compiler": "2.0.0-rc.5",
     "@angular/core": "2.0.0-rc.5",
     "@angular/forms": "^0.3.0",
+    "@angular/http": "2.0.0-rc.5",
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/platform-server": "2.0.0-rc.5",
     "@angular/router": "github:gdi2290/router-builds",
-    "@angularclass/webpack-toolkit": "^1.3.3",
-    "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/conventions-loader": "^1.0.2",
-    "ie-shim": "^0.1.0",
+    "@angularclass/request-idle-callback": "^1.0.7",
+    "@angularclass/webpack-toolkit": "^1.3.3",
     "core-js": "^2.4.0",
+    "http-server": "^0.9.0",
+    "ie-shim": "^0.1.0",
+    "jquery": "^3.1.0",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "~0.6.17",
-    "http-server": "^0.9.0"
+    "zone.js": "~0.6.17"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
@@ -100,6 +101,7 @@
     "html-webpack-plugin": "^2.21.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^2.0.0 ",
@@ -108,11 +110,14 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "node-sass": "^3.8.0",
+    "null-loader": "^0.1.1",
     "parse5": "^1.5.1",
     "protractor": "^3.2.2",
-    "raw-loader": "0.5.1",
+    "raw-loader": "^0.5.1",
     "remap-istanbul": "^0.6.3",
     "rimraf": "^2.5.2",
+    "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "^1.0.3",
     "style-loader": "^0.13.1",
@@ -129,13 +134,6 @@
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^0.14.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/angularclass/angular2-webpack-starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
   },
   "engines": {
     "node": ">= 4.2.1",
