--- a/package.json
+++ b/package.json
@@ -69,11 +69,15 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/webpack-toolkit": "^1.3.3",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jquery": "^3.1.0",
+    "ng2-bootstrap": "^1.0.24",
     "rxjs": "5.0.0-beta.6",
+    "tether": "^1.3.4",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
@@ -116,6 +120,7 @@
     "protractor": "^3.2.2",
     "raw-loader": "^0.5.1",
     "remap-istanbul": "^0.6.3",
+    "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.2",
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
